--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -12,10 +12,10 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
         <!-- Custom common css -->
-        <link rel="stylesheet" type="text/css" href="/resources/static/css/common.css" th:href="@{css/common.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}"/>
 
         <!-- Custom common css -->
-        <script th:src="@{js/common.js}"></script>
+        <script th:src="@{/js/common.js}"></script>
 
     </head>
     <body>
