--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -20,7 +20,7 @@
                 <ul class="treeview-menu">
                     <li><a href="/employees1"><i class="fa fa-circle-o"></i> 목록(ajax)</a></li>
                     <li><a href="/employees2"><i class="fa fa-circle-o"></i> 목록(thymeleaf)</a></li>
-                    <li><a href="/clientMain"><i class="fa fa-circle-o"></i> 직원 추가</a></li>
+                    <li><a href="/employee/create"><i class="fa fa-circle-o"></i> 직원 추가</a></li>
                 </ul>
             </li>
         </ul>
