--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footerFragment">
     <div class="footer">
-        Footer 영역입니다.
+        Copyright ⓒ hrjin. All Rights Reserved.
     </div>
 </footer>
 </html>
