add exception class

--- a/src/main/resources/templates/contents/greeting.html
+++ b/src/main/resources/templates/contents/greeting.html
@@ -7,8 +7,7 @@
         <script>
             // ON LOAD
             $(document.body).ready(function() {
-                alert("hey hey hey!!!");
-                test();
+                console.log("hey hey hey!!!");
             });
         </script>
     </head>
