--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -16,7 +16,7 @@
 
     </script>
 </head>
-<body>
+<body style="background-color: darkseagreen">
     <h1 style="text-align: center">Error Page!!!</h1>
 
     <img th:src="${src}" style="display: block; margin: 0 auto;">
