--- a/src/main/resources/templates/contents/employee/list2.html
+++ b/src/main/resources/templates/contents/employee/list2.html
@@ -5,19 +5,20 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <div class="contents" layout:fragment="content">
+    <h1>직원 리스트</h1>
     <table class="type11">
         <thead>
         <tr>
+            <th scope="cols">순서</th>
             <th scope="cols">이름</th>
             <th scope="cols">나이</th>
-            <th scope="cols">연봉</th>
         </tr>
         </thead>
         <tbody id="contentBody">
-            <tr th:each="employee : ${employeeList.data}">
-                <td th:text="${employee.employee_name}"></td>
+            <tr th:each="employee, num : ${employeeList.data}">
+                <td th:text="${num.count}"></td>
+                <td><a th:href="@{'/employees/' + ${employee.id}}">[[${employee.employee_name}]]</a></td>
                 <td th:text="${employee.employee_age}"></td>
-                <td th:text="${employee.employee_salary}"></td>
             </tr>
         </tbody>
     </table>
