--- a/src/main/resources/templates/contents/employee/list2.html
+++ b/src/main/resources/templates/contents/employee/list2.html
@@ -22,5 +22,11 @@
             </tr>
         </tbody>
     </table>
+
+    <div class="pagination">
+        <th:block th:each="num: ${#numbers.sequence(1, employeeList.totalCnt)}">
+            <a th:text="${num}" th:href="@{'/employees2'(page=${num})}"></a>
+        </th:block>
+    </div>
 </div>
 </html>
